# projects

./: .directory
.fail/2d_game_engine/: 2d_game_engine.pro
.fail/2d_game_engine/_build/: 2d_game_engine  Makefile  log.txt
.fail/2d_game_engine/src/: Application.cpp  Application.h  Config.h  main.cpp
.fail/2d_zombie_killer/: 2d_zombie_killer.pro  2d_zombie_killer.pro.user.db48456.20
.fail/2d_zombie_killer/src/: Application.cpp  Application.h  Config.h  Info.h
.fail/bao_ve_ngan_ha/: bao_ve_ngan_ha.pro  bao_ve_ngan_ha.pro.user.ccaf7b1.4.8-pre1
.fail/challenge_encoder/: main.cpp
.old/: .directory
.old/GameEngine_SDL2-master/: GameEngine_SDL2.pro  README.md  diagram.xml
.research/multithread/: Runtime.cpp  Runtime.h  main.cpp  multithread.pro
.research/qtwidgets/: MainWindow.cpp  MainWindow.ui  qtwidgets.pro
.research/std_function/: main.cpp  std_function.pro  test1.cpp  test2.cpp
C++/ConsoleTricks/: ConsoleTricks.pro  main.cpp
C++/CssRemoveAttr/: main.cpp
C++/LearnOpenGL/: LearnOpenGL.pro  main.cpp
C++/Test/: main.cpp
C++/Test02/: meson.build
C++/Test02/src/: main.cpp  (+3 more)
C++/Utils/: Indexer.cpp  Indexer.h  Misc.cpp  Misc.h  Utils.pro
C++/learnvim/: a.out  main.cpp
C++/thinmatrix_opengl/: .CMakeLists.txt.swp  CMakeLists.txt
C++/thinmatrix_opengl/src/: main.cpp
C++/thinmatrix_opengl/src/RenderEngine/: Config.h  Display.cpp  Display.h  ModelLoader.cpp  ModelLoader.h  RawModel.cpp  RawModel.h  Renderer.h
C++/thinmatrix_opengl/src/Utils/: Log.h  Misc.cpp  Misc.h
Java/.metadata/: version.ini
Java/BauCua/: .project
Python/: test.py
(+169 files in other folders)
